Add test submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = modules/_testmodules
 	url = https://github.com/OpenLocalizationTest/oltest_ems
 	branch = master
+[submodule "testmodule2"]
+	path = modules/_testmodules2
+	url = https://github.com/OpenLocalizationTest/oltest_ems
+	branch = master
